<resources>
    <string name="app_name">SRCM</string>
    <string name="location_title">LOCATION SETTINGS</string>
    <string name="location_service_msg">Please turn on location services before using the app.</string>
    <string name="version">1.1.0</string>
    <string name="sign_in">SIGN IN</string>
    <string name="OKAY">OKAY</string>
    <string name="api_url">https://srcm.techinnovators.co.in/</string>
    <string name="api_methodname_login">api/method/login</string>
    <string name="api_methodname_visit_requests">api/resource/Visit%20Request?</string>
    <string name="api_methodname_visit_request">api/resource/Visit%20Request</string>
    <!--Put the name of create visit request method name-->
    <string name="api_methodname_createVisit">api/resource/???</string>
    <string name="login_req_api_param_usr">usr</string>
    <string name="login_req_api_param_pwd">pwd</string>
    <string name="token_value">token\u0020%s:%s</string>
    <string name="prog_dialog_title">Please wait..</string>
    <string name="error_404">Server not found</string>
    <string name="error_401">Invalid Login Details</string>
    <string name="error_500">Please check your server logs or contact tech support.</string>
    <string name="internet_off">Internet is turned off. Please turn on internet.</string>
    <string name="no_records">No records found</string>
    <string name="app_auth_key">536aa3df73a76dcdf6c64a3919f4a0d3</string>
    <string name="api_method_fieldwork_tracking_get_user_details">api/method/field_work_tracking.api.get_user_details</string>
    <string name="api_secret_param_key">api_secret</string>
    <string name="api_key_param_key">api_key</string>
    <string name="message_param_key">message</string>
    <string name="enabled_param_key">enabled</string>
    <string name="app_auth_key_param_key">app_auth_key</string>
    <string name="fields_param_key">fields=</string>
    <string name="filters_param_key">filters=</string>
    <string name="fields_value">[\"name\",\"project_type\",\"project_name\",\"visit_date\",\"visit_place\",\"visit_state\",\"visit_district\",\"visit_taluka\",\"visit_location\",\"contact_person_name\",\"contact_person_mobile_no\",\"visit_type\",\"visit_mode\",\"visit_expiry_date\",\"visit_checkin\",\"visit_checkout\"]</string>
    <string name="fields_value_district">[\"name\",\"state\"]</string>
    <string name="fields_value_taluka">[\"name\",\"district\"]</string>
    <string name="fields_value_location">[\"name\",\"taluka\"]</string>
    <string name="data_param_key">data</string>
    <string name="error_403">Token is missing. You are unauthorized to use this app.</string>
    <string name="Invalid_credentials">Invalid username or password</string>
    <string name="activity_details">ACTIVITY DETAILS</string>
    <string name="save">SAVE</string>
    <string name="api_methodname_attendance">api/resource/Attendance</string>
    <string name="dateFormat">yyyy-MM-dd</string>
    <string name="dateFormat_display">dd-MM-yyyy</string>
    <string name="timeFormat">HH:mm:ss</string>
    <string name="intent_company_key">company</string>
    <string name="attendance_default_status">Present</string>
    <string name="attendance_date_param_key">attendance_date</string>
    <string name="company_param_key">company</string>
    <string name="doctype_param_key">doctype</string>
    <string name="employee_param_key">employee</string>
    <string name="first_checkin_param_key">first_checkin</string>
    <string name="visit_checkin_param_key">visit_checkin</string>
    <string name="last_checkout_param_key">last_checkout</string>
    <string name="status_param_key">status</string>
    <string name="total_working_hours_param_key">total_working_hours</string>
    <string name="attendance_param_value">Attendance</string>
    <string name="docstatus_param_key">docstatus</string>
    <string name="emp_id_intent_key">emp_id</string>
    <string name="name_param_key">name</string>
    <string name="_server_messages_param_key">_server_messages</string>
    <string name="intent_visit_request_key">visit_request</string>
    <string name="ACTIVITY_DETAILS_TITLE">ACTIVITY DETAILS</string>
    <string name="user_app_module_param_key">user_app_module</string>
    <string name="visit_request_param_key">\"Visit Request\"</string>
    <string name="visit_request_param_value">Visit Request</string>
    <string name="employee_id_param_key">employee_id</string>
    <string name="unknown_host">java.net.UnknownHostException: Unable to resolve host "srcm.techinnovators.co.in": No address associated with hostname</string>
    <string name="add_visit_request">Add Visit Request</string>
    <string name="visit_date">Visit Date</string>
    <string name="visit_assigned_to">Visit Assigned To</string>
    <string name="visit_mode">Visit Mode</string>
    <string name="event_sector">Event Sector</string>
    <string name="project_name">Project Type</string>
    <string name="api_method_projecttype">api/resource/Event Category?</string>
    <string name="api_method_organizationname">api/resource/Visit%20Place?</string>
    <string name="api_method_visitstate">api/resource/Visit%20State?</string>
    <string name="api_method_visitdistrict">api/resource/Visit%20District?</string>
    <string name="api_method_visittaluka">api/resource/Visit%20Taluka?</string>
    <string name="api_method_visitlocation">api/resource/Visit%20Location?</string>
    <string name="api_method_project">api/resource/Event Type?</string>
    <string name="project_type">Event Category</string>
    <string name="check_in">CHECK IN</string>
    <string name="check_out">CHECK OUT</string>
    <string name="organisation_name">Organisation Name</string>
    <string name="state">Visit State</string>
    <string name="visit_taluka">Visit Taluka</string>
    <string name="visitlocation">Visit Location</string>
    <string name="contact_person_name">Contact Person Name</string>
    <string name="contact_person_mobile_number">Contact Person Mobile Number</string>
    <string name="create_visit_request">CREATE VISIT REQUEST</string>
    <string name="orgname">ORGANISATION NAME</string>
    <string name="visit_district">Visit District</string>
    <string name="event_sector_empty_msg">Please select Event Sector</string>
    <string name="proj_name_empty_msg">Please select Event Type</string>
    <string name="proj_type_empty_msg">Please select Event Categories</string>
    <string name="date_empty_msg">Please select visit date</string>
    <string name="orgname_empty_msg">Please select organisation name</string>
    <string name="visitstate_empty_msg">Please select visit state</string>
    <string name="visitdist_empty_msg">Please select visit district</string>
    <string name="visittaluka_empty_msg">Please select visit taluka</string>
    <string name="visitlocation_empty_msg">Please select visit location</string>
    <string name="visitlocationToBe_empty_msg">Please select visit location to be</string>
    <string name="project_type_villageconnect">Village Connect</string>
    <string name="create_Visit">CREATE VISIT REQUEST</string>
    <string name="state_param_key">state</string>
    <string name="total_number_of_participants">Total number of participants</string>
    <string name="prefect_trainer_name">Prefect Trainer Name</string>
    <string name="data_of_participants_taken">Data Of Participants Taken</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="remarks">Remarks</string>
    <string name="select_images">Select Images</string>
    <string name="visit_location_to_be">Visit Location To Be</string>
</resources>