<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/csMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddVisitRequestActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/rosegold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar_content"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/add_visit_request"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivBack"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_16sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvProjectName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_8sdp"
                android:text="@string/project_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/acProjectName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvProjectType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_8sdp"
                android:text="@string/project_type"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/acProjectType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_12ssp" />

<!--            <TextView-->
<!--                android:id="@+id/tvVisitDate"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:fontFamily="@font/poppins_regular"-->
<!--                android:padding="@dimen/_8sdp"-->
<!--                android:text="@string/visit_date"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="@dimen/_12ssp" />-->

<!--            <androidx.appcompat.widget.AppCompatEditText-->
<!--                android:id="@+id/etDate"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="@drawable/edittext_background"-->
<!--                android:drawableEnd="@drawable/ic_calendar"-->
<!--                android:drawableTint="@color/black"-->
<!--                android:fontFamily="@font/poppins_regular"-->
<!--                android:lines="1"-->
<!--                android:focusable="false"-->
<!--                android:padding="@dimen/_8sdp"-->
<!--                android:singleLine="true"-->
<!--                android:textColor="@color/black"-->
<!--                android:textColorHint="@color/black"-->
<!--                android:textSize="@dimen/_12ssp"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/tvVisitDate" />-->


            <TextView
                android:id="@+id/tvAssignedTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_8sdp"
                android:text="@string/visit_assigned_to"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etDate" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etAssignedTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:drawableEnd="@drawable/ic_reportperson"
                android:enabled="false"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:inputType="text"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvVisitType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_8sdp"
                android:text="Visit Type"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etDate" />

            <Spinner
                android:id="@+id/spin_activity"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="match_parent"
                android:background="@drawable/spinner_shape"
                android:entries="@array/visit_type"
                android:padding="@dimen/_8sdp" />

            <TextView
                android:id="@+id/tvVisitMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_8sdp"
                android:text="@string/visit_mode"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spin_activity" />

            <Spinner
                android:id="@+id/spin_visitmode"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="match_parent"
                android:background="@drawable/spinner_shape"
                android:entries="@array/visit_mode"
                android:padding="@dimen/_8sdp" />

            <TextView
                android:id="@+id/tvOrgName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_8sdp"
                android:text="@string/organisation_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spin_activity" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/acOrgName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_8sdp"
                android:text="@string/state"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spin_activity" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/acState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_8sdp"
                android:text="@string/visit_district"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spin_activity" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/acDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvTaluka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_8sdp"
                android:text="@string/visit_taluka"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spin_activity" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/acTaluka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/poppins_regular"
                android:focusable="false"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_8sdp"
                android:text="@string/visitlocation"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/acVLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/poppins_regular"
                android:focusable="false"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvContactPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_8sdp"
                android:text="@string/contact_person_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etContPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:drawableEnd="@drawable/ic_reportperson"
                android:drawableTint="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:inputType="text"
                android:lines="1"
                android:padding="@dimen/_8sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@+id/tvVisitDate" />

            <TextView
                android:id="@+id/tvContactPersonNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_8sdp"
                android:text="@string/contact_person_mobile_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etContPersonNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:drawableEnd="@drawable/ic_phone"
                android:drawableTint="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:inputType="phone"
                android:lines="1"
                android:padding="@dimen/_8sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@+id/tvVisitDate" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/rounded_active_button"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/create_visit_request"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nestedScrollView" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>